--- a/client/package.json
+++ b/client/package.json
@@ -9,8 +9,11 @@
     "nanoid": "^5.0.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-notifications-component": "^4.0.1",
+    "react-player": "^2.16.0",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
+    "screenfull": "^6.0.2",
     "socket.io-client": "^4.8.0",
     "web-vitals": "^2.1.4"
   },
